--- a/.github/workflows/resume-to-pdf.yml
+++ b/.github/workflows/resume-to-pdf.yml
@@ -14,10 +14,12 @@ jobs:
       - uses: baileyjm02/markdown-to-pdf@v1
         with:
           input_dir: .
-          output_dir: pdfs
-          # Default is true, can set to false to only get PDF files
+          output_dir: ${{ github.workspace }}/pdfs
           build_html: false
-      - uses: actions/upload-artifact@v1
+      - name: Move PDF to artifacts
+        run: mv ${{ github.workspace }}/pdfs/*.pdf ${{ github.workspace }}/artifacts/
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v2
         with:
-          name: docs
-          path: pdfs
+          name: Resume PDF
+          path: ${{ github.workspace }}/artifacts/
