--- a/.github/workflows/resume-to-pdf.yml
+++ b/.github/workflows/resume-to-pdf.yml
@@ -17,7 +17,7 @@ jobs:
         run: sudo apt-get update && sudo apt-get install pandoc -y
 
       - name: Convert Markdown to PDF
-        run: pandoc <path-to-your-markdown-file> -o resume.pdf
+        run: pandoc resume.md -o resume.pdf
 
       - name: Move PDF to artifacts
         run: mv resume.pdf ${{ github.workspace }}/artifacts/resume.pdf
