--- a/.github/workflows/resume-to-pdf.yml
+++ b/.github/workflows/resume-to-pdf.yml
@@ -21,14 +21,11 @@ jobs:
       - name: Convert Markdown to PDF
         run: pandoc resume.md -o resume.pdf
 
-      - name: Create artifacts directory
-        run: mkdir ${{ github.workspace }}/artifacts
+      - name: Add and commit PDF
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add resume.pdf
+          git commit -m "Add resume.pdf"
+          git push
 
-      - name: Move PDF to artifacts
-        run: mv resume.pdf ${{ github.workspace }}/artifacts/resume.pdf
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: Resume PDF
-          path: ${{ github.workspace }}/artifacts
